@@ -12,7 +12,7 @@
 ** DONE log in/out menu items from account entry
 ** DONE dynamic account menus for connected accounts
 ** DONE remove account (CLI)
-** TODO remove account (GUI)
+** DONE remove account (GUI)
 ** TODO roomlist
 * buddy list
 ** DONE display groups created after intial ui setup
@@ -30,7 +30,7 @@
 *** DONE hide when offline at login-time
 *** TODO hide when they go offline after you log in
 * misc stuff
-** TODO pump command failures/warnings etc into the *garak* buffer.
+** DONE pump command failures/warnings etc into the *garak* buffer.
 ** TODO set buddy icon
 ** TODO update docs to cover new client-to-daemon commands
 ** DONE can dynamic submenus be generated at invocation time? [not easily]
